[package]
name = "oreneo"
version = "1.0.1"
edition = "2021"
authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "Generate HTML from Neopolitan"
readme = "page/README.neo"
repository = "https://github.com/InfiniteCoder01/OreNeo/"
license = "MIT"
keywords = ["neopolitan", "html"]
categories = [
    "command-line-utilities",
    "parser-implementations",
    "template-engine",
    "text-processing",
    "web-programming",
]

[dependencies]
anyhow = "1.0.75"
build_html = "2.4.0"
itertools = "0.11.0"
pathdiff = "0.2.1"
regex = "1.9.3"
scanf = "1.2.1"
thiserror = "1.0.47"
